@@ -28,6 +28,7 @@ from queue import Empty, Queue
 import argparse
 import datetime
 import dateutil.parser
+import json
 import logging
 import logging.handlers
 import os
@@ -291,18 +292,51 @@ class PGHoard:
             self.state["backup_sites"][site] = {"basebackups": []}
 
     def startup_walk_for_missed_files(self):
+        """Check xlog and xlog_incoming directories for files that receivexlog has received but not yet
+        compressed as well as the files we have compressed but not yet uploaded and process them."""
         for site in self.config["backup_sites"]:
-            xlog_path, basebackup_path = self.create_backup_site_paths(site)  # pylint: disable=unused-variable
-            for filename in os.listdir(xlog_path):
-                if not filename.endswith(".partial"):
-                    compression_event = {
-                        "delete_file_after_compression": True,
-                        "full_path": os.path.join(xlog_path, filename),
-                        "site": site,
-                        "type": "CLOSE_WRITE",
-                    }
-                    self.log.debug("Found: %r when starting up, adding to compression queue", compression_event)
-                    self.compression_queue.put(compression_event)
+            compressed_xlog_path, _ = self.create_backup_site_paths(site)
+            uncompressed_xlog_path = compressed_xlog_path + "_incoming"
+
+            # Process uncompressed files (ie WAL pg_receivexlog received)
+            for filename in os.listdir(uncompressed_xlog_path):
+                full_path = os.path.join(uncompressed_xlog_path, filename)
+                if not wal.XLOG_RE.match(filename) and not wal.TIMELINE_RE.match(filename):
+                    self.log.warning("Found invalid file %r from incoming xlog directory", full_path)
+                    continue
+                compression_event = {
+                    "delete_file_after_compression": True,
+                    "full_path": full_path,
+                    "site": site,
+                    "type": "CLOSE_WRITE",
+                }
+                self.log.debug("Found: %r when starting up, adding to compression queue", compression_event)
+                self.compression_queue.put(compression_event)
+
+            # Process compressed files (ie things we've processed but not yet uploaded)
+            for filename in os.listdir(compressed_xlog_path):
+                if filename.endswith(".metadata"):
+                    continue  # silently ignore .metadata files, they're expected and processed below
+                full_path = os.path.join(compressed_xlog_path, filename)
+                metadata_path = full_path + ".metadata"
+                is_xlog = wal.XLOG_RE.match(filename)
+                is_timeline = wal.TIMELINE_RE.match(filename)
+                if not ((is_xlog or is_timeline) and os.path.exists(metadata_path)):
+                    self.log.warning("Found invalid file %r from compressed xlog directory", full_path)
+                    continue
+                with open(metadata_path, "r") as fp:
+                    metadata = json.load(fp)
+
+                transfer_event = {
+                    "file_size": os.path.getsize(full_path),
+                    "filetype": "xlog" if is_xlog else "timeline",
+                    "local_path": full_path,
+                    "metadata": metadata,
+                    "site": site,
+                    "type": "UPLOAD",
+                }
+                self.log.debug("Found: %r when starting up, adding to transfer queue", transfer_event)
+                self.transfer_queue.put(transfer_event)
 
     def start_threads_on_startup(self):
         # Startup threads
